# ml.school

./: .gitignore  .markdownlint.json  CLAUDE.md  Project.ipynb  README.md  Session 1.ipynb  Session 3.ipynb  Session-1.ipynb  cohort.html  deploying.ipynb  env.shared  example.env  example.py  execution-policy.json  idx-template.json  idx-template.nix  index.html  index222.qmd  justfile  local.json  logging.conf  mlschool-toc.json  mlschool.py  mnist.ipynb  penguins-cohort.ipynb  penguins.ipynb  pipeline.ipynb  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  trust-relationships.json
.claude/: settings.local.json
.claude/agents/: documentation-reviewer.md  guide-reviewer.md  test-runner.md
.claude/commands/: guide.md  test.md
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: training.yml
.guide/: sample.md  toc.json
.guide/amazon-web-services/: cleaning-up.md  deploying-the-model-to-sagemaker.md  deploying-the-model.md  introduction.md  (+4 more)
.idx/: dev.nix
backup/: cohort-11.ipynb  cohort-7.ipynb
cloud-formation/: mlflow-cfn.yaml  mlschool-cfn.yaml
code/: packages.sh
config/: local.json  local.toml  local.yml  rag.html  sagemaker.json  sagemaker.toml  sagemaker.yml  sqlite.json
container/: Dockerfile  container.ipynb  ml-dependencies.yml
data/: synthetic-penguins.csv
guide/: sample.md
mnist/: mnist.ipynb
notebooks/: eda.ipynb  metaflow.ipynb  mlflow.ipynb  sex_vs_species_exploration.ipynb
penguins/: cohort-6.ipynb  cohort-8.ipynb  cohort.ipynb  cohort7.ipynb  deploying-model.ipynb  future.ipynb  local-setup.ipynb  packages.sh  penguins-Session1.ipynb  penguins-Session2.ipynb  penguins-Session3.ipynb  penguins-Session4.ipynb  penguins-Session5.ipynb  penguins-Session6.ipynb  penguins-cohort.ipynb  penguins-deploy.ipynb  penguins-endpoint.ipynb  penguins-monitoring.ipynb  penguins-pipeline.ipynb  penguins-setup.ipynb  penguins-teardown.ipynb  penguins.flow  studio-setup.ipynb  test.ipynb
pipelines/: backend.py  common.py  deployment.py  endpoint.py  endpoint_PIPELINE.py  indexing.py  inference.py  labeling.py  labels.py  monitoring.py  sagemaker.py  traffic.py  training.py  tuning.py
program/: CNAME  OLDcohort-8.ipynb  Sample.xlsx  _quarto.yml  assignments.qmd  cohort.ipynb  cohort8.ipynb  home_data.csv  home_data_sample.csv  houseprice.ipynb  houseprice_v2.ipynb  index.ipynb  index.qmd  instructions.qmd  nbdev.yml  penguins.flow  project.qmd  setup.qmd  sidebar.yml  studio-setup.ipynb  teardown.ipynb
scripts/: aws.py  sagemaker_labeling.py
tests/: conftest.py  flowmixin_flow.py  mock_pipeline.py  pipelines  test_common_flowmixin.py  test_common_model.py  test_common_packages.py  test_common_pipeline.py  test_common_transformers.py  test_flowmixin.py  test_inference.py  test_mlflow_integration.py  test_monitoring.py  test_training.py  test_training_cross_validation.py  test_training_register.py  test_training_train.py  test_training_transform.py
webapp/: homepage.html  index.html
(+215 files in other folders)
